login-draft-check works

--- a/src/application/Login.fxml
+++ b/src/application/Login.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginController">
    <children>
       <Label contentDisplay="CENTER" layoutX="117.0" layoutY="30.0" text="Dinner Club">
@@ -36,6 +35,7 @@
                   <Font size="18.0" />
                </font>
             </TextField>
+            <Label fx:id="wrongUsername" textFill="#c30707" GridPane.columnSpan="2" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </children>
