--- a/src/application/Login.fxml
+++ b/src/application/Login.fxml
@@ -26,11 +26,12 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="newUser" mnemonicParsing="false" onAction="#newUser" prefWidth="100.0" text="New user" GridPane.rowIndex="2" />
-            <Button fx:id="login" mnemonicParsing="false" onAction="#login" prefWidth="100.0" text="Login" GridPane.rowIndex="3" />
-            <TextField fx:id="username" promptText="Username" GridPane.columnSpan="2">
+            <Button fx:id="newUser" mnemonicParsing="false" onAction="#newUser" prefWidth="100.0" text="New user" GridPane.rowIndex="3" />
+            <Button fx:id="login" mnemonicParsing="false" onAction="#login" prefWidth="100.0" text="Login" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="username" prefHeight="59.0" prefWidth="200.0" promptText="Username" GridPane.columnSpan="2" GridPane.rowSpan="2">
                <font>
                   <Font size="18.0" />
                </font>
