--- a/src/application/CreateDinnerClub.fxml
+++ b/src/application/CreateDinnerClub.fxml
@@ -2,14 +2,14 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.StartController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.KitchenController">
    <children>
       <Label contentDisplay="CENTER" layoutX="117.0" layoutY="30.0" text="Dinner Club">
          <font>
@@ -20,7 +20,6 @@
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -29,12 +28,12 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextArea layoutY="-3.0" prefHeight="19.0" prefWidth="200.0" promptText="Name" GridPane.columnSpan="2" GridPane.rowIndex="1">
+            <Button fx:id="newClub" mnemonicParsing="false" onAction="#newClubButtonClicked" prefHeight="27.0" prefWidth="199.0" text="Create dinner club" GridPane.columnSpan="3" GridPane.rowIndex="3" />
+            <TextField fx:id="newKitchenName" promptText="Name" GridPane.columnSpan="2" GridPane.rowIndex="1">
                <font>
                   <Font size="15.0" />
                </font>
-            </TextArea>
-            <Button mnemonicParsing="false" onAction="#newUserButtonClicked" prefHeight="27.0" prefWidth="199.0" text="Create dinner club" GridPane.columnSpan="3" GridPane.rowIndex="3" />
+            </TextField>
          </children>
       </GridPane>
       <Label layoutX="100.0" layoutY="97.0" text="Please enter a dinner club's name: " />
