--- a/src/application/KitchenFrame.fxml
+++ b/src/application/KitchenFrame.fxml
@@ -3,20 +3,25 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.KitchenController">
    <children>
-      <Label contentDisplay="CENTER" layoutX="134.0" layoutY="30.0" text="Welcome">
+      <Label contentDisplay="CENTER" layoutX="64.0" layoutY="29.0" text="Select Dinner Club">
          <font>
             <Font size="30.0" />
          </font>
       </Label>
-      <Button fx:id="newKitchen" layoutX="126.0" layoutY="82.0" mnemonicParsing="false" onAction="#newKitchen" text="Find new Dinner Club" />
-      <RadioButton fx:id="kitchen1" layoutX="84.0" layoutY="141.0" mnemonicParsing="false" />
-      <RadioButton fx:id="kitchen2" layoutX="84.0" layoutY="171.0" mnemonicParsing="false" />
-      <RadioButton fx:id="kitchen3" layoutX="84.0" layoutY="201.0" mnemonicParsing="false" visible="false" />
-      <RadioButton fx:id="kitchen4" layoutX="84.0" layoutY="233.0" mnemonicParsing="false" visible="false" />
+      <Button fx:id="newKitchen" layoutX="26.0" layoutY="248.0" mnemonicParsing="false" onAction="#newKitchen" prefWidth="170.0" text="Create Dinner Club" />
+      <RadioButton fx:id="kitchen1" layoutX="141.0" layoutY="94.0" mnemonicParsing="false" text="   DinnerClub1">
+         <toggleGroup>
+            <ToggleGroup fx:id="dinnerClub" />
+         </toggleGroup></RadioButton>
+      <RadioButton fx:id="kitchen2" layoutX="140.0" layoutY="123.0" mnemonicParsing="false" text="   DinnerClub2" toggleGroup="$dinnerClub" />
+      <RadioButton fx:id="kitchen3" layoutX="141.0" layoutY="158.0" mnemonicParsing="false" toggleGroup="$dinnerClub" />
+      <RadioButton fx:id="kitchen4" disable="true" layoutX="141.0" layoutY="195.0" mnemonicParsing="false" toggleGroup="$dinnerClub" />
+      <Button fx:id="select" layoutX="200.0" layoutY="248.0" mnemonicParsing="false" onAction="#selectDinnerClub" prefWidth="170.0" text="Select Dinner Club" />
    </children>
 </AnchorPane>
