--- a/src/application/Login.fxml
+++ b/src/application/Login.fxml
@@ -11,32 +11,32 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginController">
    <children>
-      <Label contentDisplay="CENTER" layoutX="117.0" layoutY="30.0" text="Dinner Club">
+      <Label contentDisplay="CENTER" layoutX="104.0" layoutY="42.0" text="Dinner Club">
          <font>
-            <Font size="30.0" />
+            <Font size="35.0" />
          </font>
       </Label>
-      <GridPane layoutX="100.0" layoutY="105.0">
+      <GridPane layoutX="73.0" layoutY="103.0" prefHeight="150.0" prefWidth="255.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="53.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="53.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="33.0" minHeight="7.0" prefHeight="7.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="69.0" minHeight="10.0" prefHeight="69.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="newUser" mnemonicParsing="false" onAction="#newUser" prefWidth="100.0" text="New user" GridPane.rowIndex="3" />
-            <Button fx:id="login" mnemonicParsing="false" onAction="#login" prefWidth="100.0" text="Login" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="username" prefHeight="59.0" prefWidth="200.0" promptText="Username" GridPane.columnSpan="2" GridPane.rowSpan="2">
+            <Button fx:id="newUser" mnemonicParsing="false" onAction="#newUser" prefWidth="120.0" text="New user" GridPane.rowIndex="4" />
+            <Button fx:id="login" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#login" prefWidth="120.0" text="Login" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="username" prefHeight="50.0" prefWidth="200.0" promptText="Username" GridPane.columnSpan="2" GridPane.rowSpan="2">
                <font>
                   <Font size="18.0" />
                </font>
             </TextField>
-            <Label fx:id="wrongUsername" textFill="#c30707" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+            <Label fx:id="wrongUsername" textFill="#bc0a0a" GridPane.columnSpan="2" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </children>
