--- a/src/application/AddDay.fxml
+++ b/src/application/AddDay.fxml
@@ -9,14 +9,14 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.StartController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.StartController">
    <children>
-      <Label contentDisplay="CENTER" layoutX="117.0" layoutY="30.0" text="Dinner Club">
+      <Label contentDisplay="CENTER" layoutX="121.0" layoutY="84.0" text="Dinner Club">
          <font>
             <Font size="30.0" />
          </font>
       </Label>
-      <GridPane layoutX="100.0" layoutY="105.0" prefHeight="120.0" prefWidth="224.0">
+      <GridPane layoutX="89.0" layoutY="178.0" prefHeight="120.0" prefWidth="215.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -29,11 +29,11 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" onAction="#newUserButtonClicked" prefHeight="27.0" prefWidth="215.0" text="Add day" GridPane.columnSpan="3" GridPane.rowIndex="3" />
-            <DatePicker prefHeight="27.0" prefWidth="217.0" GridPane.columnSpan="3" GridPane.rowIndex="1" />
+            <Button fx:id="addDayButton" mnemonicParsing="false" onAction="#addDayButtonClicked" prefHeight="27.0" prefWidth="215.0" text="Add day" GridPane.columnSpan="3" GridPane.rowIndex="3" />
+            <DatePicker fx:id="datePicker" prefHeight="27.0" prefWidth="217.0" GridPane.columnSpan="3" GridPane.rowIndex="1" />
          </children>
       </GridPane>
-      <Label layoutX="100.0" layoutY="87.0" prefHeight="37.0" prefWidth="231.0" text="Please add a day to your dinner club: ">
+      <Label layoutX="97.0" layoutY="152.0" prefHeight="37.0" prefWidth="215.0" text="Please add a day to your dinner club: ">
          <font>
             <Font size="12.0" />
          </font>
