--- a/src/application/CreateDinnerClub.fxml
+++ b/src/application/CreateDinnerClub.fxml
@@ -9,14 +9,14 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.KitchenController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.KitchenController">
    <children>
-      <Label contentDisplay="CENTER" layoutX="117.0" layoutY="30.0" text="Dinner Club">
+      <Label contentDisplay="CENTER" layoutX="117.0" layoutY="84.0" text="Dinner Club">
          <font>
             <Font size="30.0" />
          </font>
       </Label>
-      <GridPane layoutX="100.0" layoutY="105.0">
+      <GridPane layoutX="100.0" layoutY="177.0" prefWidth="200.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -25,19 +25,20 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="newClub" mnemonicParsing="false" onAction="#newClubButtonClicked" prefHeight="27.0" prefWidth="199.0" text="Create dinner club" GridPane.columnSpan="3" GridPane.rowIndex="3" />
-            <TextField fx:id="newKitchenName" promptText="Name" GridPane.columnSpan="2" GridPane.rowIndex="1">
-               <font>
+            <Button fx:id="createKitchenButton" mnemonicParsing="false" onAction="#createKitchenButtonClicked" prefHeight="48.0" prefWidth="199.0" text="Create dinner club" GridPane.columnSpan="3" GridPane.rowIndex="2" />
+            <TextField fx:id="newKitchenTextField" prefHeight="50.0" prefWidth="200.0" promptText="Name" GridPane.columnSpan="2">
+            
+                     <font>
                   <Font size="15.0" />
                </font>
             </TextField>
          </children>
       </GridPane>
-      <Label layoutX="100.0" layoutY="97.0" text="Please enter a dinner club's name: " />
-      <Button fx:id="backButton" layoutX="23.0" layoutY="253.0" mnemonicParsing="false" onAction="#backToKitchenFrame" text="Back" />
+      <Label layoutX="94.0" layoutY="141.0" text="Please enter a dinner club's name: " />
+      <Button fx:id="backButton" layoutX="14.0" layoutY="359.0" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" />
    </children>
 </AnchorPane>
