--- a/src/application/Login.fxml
+++ b/src/application/Login.fxml
@@ -35,7 +35,7 @@
                <GridPane.margin>
                   <Insets />
                </GridPane.margin></Button>
-            <TextField fx:id="usernameTextField" onKeyTyped="#loginEnterTyped" prefHeight="50.0" prefWidth="200.0" promptText="Username" GridPane.columnSpan="2" GridPane.rowSpan="2">
+            <TextField fx:id="usernameTextField" onAction="#loginEnterTyped" prefHeight="50.0" prefWidth="200.0" promptText="Username" GridPane.columnSpan="2" GridPane.rowSpan="2">
                <font>
                   <Font size="18.0" />
                </font>
