--- a/src/application/SelectKitchen.fxml
+++ b/src/application/SelectKitchen.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.KitchenController">
    <children>
-      <Label contentDisplay="CENTER" layoutX="66.0" layoutY="84.0" text="Select Dinner Club">
+      <Label fx:id="titleLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="66.0" layoutY="84.0" text="Select Dinner Club" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
          <font>
             <Font size="30.0" />
          </font>
