--- a/src/application/DayOverview.fxml
+++ b/src/application/DayOverview.fxml
@@ -9,37 +9,38 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.DayController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.DayController">
    <children>
       <Label fx:id="titleLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="79.0" layoutY="85.0" text="Days with Dinner" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
          <font>
             <Font size="30.0" />
          </font>
       </Label>
-      <Button fx:id="logOutButton" layoutX="333.0" layoutY="14.0" mnemonicParsing="false" onAction="#logOutButtonClicked" prefHeight="18.0" prefWidth="53.0" text="Log out">
+      <Button fx:id="logOutButton" layoutX="333.0" layoutY="14.0" mnemonicParsing="false" onAction="#logOutButtonClicked" prefHeight="18.0" prefWidth="53.0" text="Log out" AnchorPane.rightAnchor="20.0">
          <font>
             <Font size="10.0" />
          </font>
       </Button>
-      <ScrollPane layoutX="45.0" layoutY="136.0">
+      <ScrollPane layoutX="45.0" layoutY="136.0" AnchorPane.leftAnchor="49.0" AnchorPane.rightAnchor="49.0">
          <content>
-            <TableView prefHeight="200.0" prefWidth="300.0">
+            <TableView prefHeight="200.0" prefWidth="400.0">
               <columns>
                 <TableColumn id="date" fx:id="dateTableColumn" prefWidth="100.0" text="Date" />
                 <TableColumn fx:id="chefTableColumn" prefWidth="100.0" text="Chef" />
-                  <TableColumn fx:id="attendTableColumn" prefWidth="100.0" text="Attend" />
+                  <TableColumn fx:id="attendTableColumn" prefWidth="100.0" text="Total nr." />
+                  <TableColumn prefWidth="100.0" text="Attend" />
               </columns>
             </TableView>
          </content>
       </ScrollPane>
       <CheckBox fx:id="viewPreviousCheckBox" layoutX="26.0" layoutY="354.0" mnemonicParsing="false" onAction="#viewPreviousCheckBoxClicked" text="View Previous" />
-      <Button fx:id="backButton" layoutX="19.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonClicked" prefHeight="18.0" prefWidth="53.0" text="Back">
+      <Button fx:id="backButton" layoutX="19.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonClicked" prefHeight="18.0" prefWidth="53.0" text="Back" AnchorPane.leftAnchor="20.0">
          <font>
             <Font size="10.0" />
          </font>
       </Button>
-      <Button fx:id="addDayButton" layoutX="171.0" layoutY="349.0" mnemonicParsing="false" onAction="#addDayButtonClicked" text="Add Day" />
-      <Button fx:id="budgetButton" layoutX="289.0" layoutY="349.0" mnemonicParsing="false" onAction="#bugdetButtonClicked" text="Budget" />
-      <Button fx:id="updateButton" layoutX="165.0" layoutY="11.0" mnemonicParsing="false" onAction="#updateButtonClicked" text="Update" />
+      <Button fx:id="addDayButton" layoutX="215.0" layoutY="350.0" mnemonicParsing="false" onAction="#addDayButtonClicked" text="Add Day" />
+      <Button fx:id="budgetButton" layoutX="289.0" layoutY="349.0" mnemonicParsing="false" onAction="#bugdetButtonClicked" text="Budget" AnchorPane.rightAnchor="55.0" />
+      <Button fx:id="updateButton" layoutX="165.0" layoutY="11.0" mnemonicParsing="false" onAction="#updateButtonClicked" text="Update" AnchorPane.leftAnchor="215.0" AnchorPane.rightAnchor="214.0" />
    </children>
 </AnchorPane>
