--- a/src/application/AddDay.fxml
+++ b/src/application/AddDay.fxml
@@ -31,6 +31,7 @@
          <children>
             <Button fx:id="createDayButton" mnemonicParsing="false" onAction="#createDayButtonClicked" prefHeight="27.0" prefWidth="215.0" text="Add day" GridPane.columnSpan="3" GridPane.rowIndex="3" />
             <DatePicker fx:id="newDateDatePicker" prefHeight="27.0" prefWidth="217.0" GridPane.columnSpan="3" GridPane.rowIndex="1" />
+            <Label fx:id="noDayLabel" textFill="#c30707" GridPane.columnSpan="2" GridPane.rowIndex="2" />
          </children>
       </GridPane>
       <Label layoutX="97.0" layoutY="152.0" prefHeight="37.0" prefWidth="215.0" text="Please add a day to your dinner club: ">
@@ -38,5 +39,15 @@
             <Font size="12.0" />
          </font>
       </Label>
+      <Button fx:id="backToOverviewButton" layoutX="29.0" layoutY="24.0" mnemonicParsing="false" onAction="#backToOverviewButtonClicked" prefHeight="18.0" prefWidth="53.0" text="Back" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Button>
+      <Button fx:id="logOutButton" layoutX="343.0" layoutY="24.0" mnemonicParsing="false" onAction="#logOutButtonClicked" prefHeight="18.0" prefWidth="53.0" text="Log out" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
