--- a/src/application/CreateDinnerClub.fxml
+++ b/src/application/CreateDinnerClub.fxml
@@ -16,7 +16,7 @@
             <Font size="30.0" />
          </font>
       </Label>
-      <GridPane layoutX="100.0" layoutY="202.0" prefWidth="200.0">
+      <GridPane layoutX="100.0" layoutY="202.0" prefWidth="200.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -29,16 +29,17 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="createKitchenButton" mnemonicParsing="false" onAction="#createKitchenButtonClicked" prefHeight="48.0" prefWidth="199.0" text="Create dinner club" GridPane.columnSpan="3" GridPane.rowIndex="2" />
+            <Button fx:id="createKitchenButton" mnemonicParsing="false" onAction="#createKitchenButtonClicked" prefWidth="250.0" text="Create dinner club" GridPane.columnSpan="2" GridPane.rowIndex="2" />
             <TextField fx:id="newKitchenTextField" prefHeight="50.0" prefWidth="200.0" promptText="Name" GridPane.columnSpan="2">
             
                      <font>
                   <Font size="15.0" />
                </font>
             </TextField>
+            <Label fx:id="emptyLabel" textFill="#bc0707" GridPane.columnSpan="2" GridPane.rowIndex="3" />
          </children>
       </GridPane>
       <Label layoutX="94.0" layoutY="166.0" text="Please enter a dinner club's name: " />
-      <Button fx:id="backButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" />
+      <Button fx:id="backButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0" />
    </children>
 </AnchorPane>
