--- a/src/application/Login.fxml
+++ b/src/application/Login.fxml
@@ -30,10 +30,13 @@
             <RowConstraints maxHeight="69.0" minHeight="10.0" prefHeight="69.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="newUserButton" mnemonicParsing="false" onAction="#newUserButtonClicked" prefHeight="27.0" prefWidth="134.0" text="New user" GridPane.rowIndex="4" />
+            <Button fx:id="newUserButton" mnemonicParsing="false" onAction="#newUserButtonClicked" prefHeight="27.0" prefWidth="134.0" text="New user" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin></Button>
             <Button fx:id="loginButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#loginButtonClicked" prefHeight="27.0" prefWidth="185.0" text="Login" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <GridPane.margin>
-                  <Insets />
+                  <Insets left="10.0" />
                </GridPane.margin></Button>
             <TextField fx:id="usernameTextField" onAction="#loginEnterTyped" prefHeight="50.0" prefWidth="200.0" promptText="Username" GridPane.columnSpan="2" GridPane.rowSpan="2">
                <font>
