--- a/src/application/NewUser.fxml
+++ b/src/application/NewUser.fxml
@@ -16,7 +16,7 @@
             <Font size="30.0" />
          </font>
       </Label>
-      <GridPane layoutX="39.0" layoutY="148.0" prefHeight="157.0" prefWidth="323.0">
+      <GridPane layoutX="39.0" layoutY="148.0" prefHeight="157.0" prefWidth="323.0" AnchorPane.leftAnchor="38.0" AnchorPane.rightAnchor="38.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -25,25 +25,19 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Please enter a dinner club's name: " GridPane.columnSpan="2" GridPane.rowIndex="2" />
+            <Label fx:id="newUserLabel" textFill="#c30808" GridPane.columnSpan="2" GridPane.rowIndex="2" />
             <Label text="Please enter your name: " GridPane.columnSpan="2" />
             <TextField fx:id="newUserNameTextField" promptText="Name" GridPane.columnSpan="2" GridPane.rowIndex="1">
                <font>
                   <Font size="15.0" />
                </font>
             </TextField>
-            <TextField fx:id="kitchenNameTextField" prefHeight="35.0" prefWidth="323.0" promptText="Name" GridPane.columnSpan="2" GridPane.rowIndex="3">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </TextField>
-            <Button fx:id="createNewUserButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#createNewUserButtonClicked" prefHeight="27.0" prefWidth="150.0" text="Create new user" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonClicked" prefWidth="150.0" text="Back" GridPane.rowIndex="5" />
+            <Button fx:id="createNewUserButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#createNewUserButtonClicked" prefHeight="27.0" prefWidth="150.0" text="Create new user" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonClicked" prefWidth="150.0" text="Back" GridPane.rowIndex="4" />
          </children>
       </GridPane>
    </children>
