--- a/src/application/DayWindow.fxml
+++ b/src/application/DayWindow.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
@@ -20,19 +19,15 @@
       <Button fx:id="backToOverviewButton" layoutX="19.0" layoutY="14.0" mnemonicParsing="false" onAction="#backToOverviewButtonClicked" prefHeight="25.0" prefWidth="65.0" text="Back" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="20.0" />
       <Button fx:id="budgetButton" layoutX="289.0" layoutY="349.0" mnemonicParsing="false" onAction="#bugdetButtonClicked" prefWidth="84.0" text="Budget" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" />
       <Button fx:id="dayUpdateButton" layoutX="120.0" layoutY="20.0" mnemonicParsing="false" onAction="#dayUpdateButtonClicked" prefHeight="25.0" prefWidth="170.0" text="Update" AnchorPane.leftAnchor="125.0" AnchorPane.rightAnchor="315.0" AnchorPane.topAnchor="20.0" />
-      <ScrollPane layoutX="20.0" layoutY="69.0" prefHeight="327.0" prefWidth="260.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="310.0" AnchorPane.topAnchor="63.0">
-         <content>
-            <TableView prefHeight="372.0" prefWidth="251.0">
-              <columns>
-                <TableColumn fx:id="dayNameColumn" prefWidth="167.0" text="Name" />
-                <TableColumn fx:id="dayAttendingColumn" prefWidth="85.0" text="Attending" />
-              </columns>
-            </TableView>
-         </content>
-      </ScrollPane>
+      <TableView prefHeight="372.0" prefWidth="251.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="329.0" AnchorPane.topAnchor="63.0">
+        <columns>
+          <TableColumn fx:id="dayNameColumn" prefWidth="167.0" text="Name" />
+          <TableColumn fx:id="dayAttendingColumn" prefWidth="85.0" text="Attending" />
+        </columns>
+      </TableView>
       <Pane layoutX="310.0" layoutY="289.0" prefHeight="200.0" prefWidth="260.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="310.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="289.0">
          <children>
-            <TextArea fx:id="dayNote" prefHeight="146.0" prefWidth="270.0" />
+            <TextArea fx:id="dayNote" prefHeight="150.0" prefWidth="270.0" />
          </children>
       </Pane>
       <Button layoutX="528.0" layoutY="555.0" mnemonicParsing="false" text="Set Note" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
